RESOLVED FIXED97046
Division by zero crash in BackingStore::scroll
https://bugs.webkit.org/show_bug.cgi?id=97046
Summary Division by zero crash in BackingStore::scroll
Anders Carlsson
Reported 2012-09-18 14:45:31 PDT
Division by zero crash in BackingStore::scroll
Attachments
Patch (2.32 KB, patch)
2012-09-18 14:47 PDT, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2012-09-18 14:47:13 PDT
Anders Carlsson
Comment 2 2012-09-18 15:00:24 PDT
Note You need to log in before you can comment on or make changes to this bug.