Division by zero crash in BackingStore::scroll https://bugs.webkit.org/show_bug.cgi?id=97046 <rdar://problem/11722564>

Reviewed by Dan Bernstein.

It appears that DrawingAreaImpl::scroll can be called with an empty scroll rect. Do nothing
if that's the case. Also, assert that the scrolling rect in BackingStoreMac is never empty.

* UIProcess/mac/BackingStoreMac.mm:
(WebKit::BackingStore::scroll):
* WebProcess/WebPage/DrawingAreaImpl.cpp:
(WebKit::DrawingAreaImpl::scroll):

Canonical link: https://commits.webkit.org/114994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128935 268f45cc-cd09-0410-ab3c-d52691b4dbfc